Update Azuretest.md